<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up with Email"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/etSignupOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="SMS Code"
        android:visibility="gone"
        android:inputType="number"/>

    <Button
        android:id="@+id/btnVerifySignupOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Finish Phone Signup"
        android:visibility="gone"/>

</LinearLayout>