<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="350dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Event"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <EditText android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Event Name" />

        <EditText android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Date (DD-MM-YYYY)"
            android:inputType="date"
            android:layout_marginTop="8dp"/>

        <EditText android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Category (e.g. Sports, Music)"
            android:layout_marginTop="8dp"/>

        <EditText android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location"
            android:layout_marginTop="8dp"/>

        <EditText android:id="@+id/etSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Total Seats"
            android:inputType="number"
            android:layout_marginTop="8dp"/>

        <Button android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Event"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>