...
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="end">

            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="#D32F2F"/>
        </LinearLayout>
...
